# oz

./: Cargo.toml
prolog/: intent.pl  intent.pro  network.pl  network.pro  new.pro  old_ont_network.pro  ont_intent.pro  ont_network.pro  ontology.pro  oz.pro  service.pro  test.pro  util.pro
prolog/learn/: facts.pro  family.pro  family.ttl  newfamily.ttl
prolog/learn/Pirates/: daemon.pl  run.pl  users.db
prolog/learn/Pirates/RDF-store/: prefixes.db
prolog/learn/Pirates/RDF-store/16/61/: http%3a%2f%2fsemanticweb%2ecs%2evu%2enl%2f2009%2f11%2fsem%2f.trp
prolog/learn/Pirates/RDF-store/81/cc/: file%3a%2f%2f%2fhome%2fpaul%2fprojects%2foz%2fprolog%2fPirates%2fcpack%2fpirates%2frdf%2fpirates%2fpiracy_events_imb_mss_eez%2erdf.trp
prolog/learn/Pirates/RDF-store/84/28/: file%3a%2f%2f%2fhome%2fpaul%2fprojects%2foz%2fprolog%2fPirates%2fcpack%2fpirates%2frdf%2fpirates%2feez%2ettl.trp
prolog/learn/Pirates/RDF-store/e3/45/: file%3a%2f%2f%2fhome%2fpaul%2fprojects%2foz%2fprolog%2fPirates%2fcpack%2fpirates%2frdf%2fpirates%2ftypes_and_mappings%2erdf.trp
prolog/learn/Pirates/RDF-store/ef/55/: http%3a%2f%2fwww%2ew3%2eorg%2f2002%2f07%2fowl.trp
prolog/learn/Pirates/RDF-store/f3/dc/: http%3a%2f%2fwww%2ew3%2eorg%2f1999%2f02%2f22%2drdf%2dsyntax%2dns.trp
prolog/learn/Pirates/config-enabled/: 010-packs.pl  README.txt  config.done  localhost.pl  pirates.pl
prolog/old/: chr.pro  intent.pl  monotonic.pro  network.pl  rewrite.pro
src/: api.rs  common.rs  demo.rs  graphdb.rs  legacy.rs  main.rs  models.rs  monitor.rs  onos.rs  prolog.rs  srims.rs  stack.rs
src/api/: messages.rs  rasa.rs  sessions.rs  webui.rs
src/old/: prolog.rs
src/prolog/: ontology.rs
