[package]
name = "oz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swipl = { version = "0.3", features = ["serde"]}
swipl-info = "0.3.2"
futures = "0.3"
tokio = { version = "1.21", features = ["rt", "macros", "rt-multi-thread"] }
reqwest = { version = "0.11.11", features = ["socks", "blocking"]}
colored = "2.0.0"
regex = "1"
percent-encoding = "2.2.0"
threadpool = "1.8.1"
lazy_static = "1.4.0"
rand = "0.8.5"
serde_with = "2.3.2"
env_logger = "0.10.0"
log = "0.4.17"
uuid = { version = "1.3.1", features = ["v4", "fast-rng"]}

# Python FFI
#pythonize = "*"
#pyo3 = { version = "0.17", features = ["extension-module"] }
#pyo3-asyncio = { version = "0.17", features = ["async-std-runtime"] }
#pyo3-ffi = { version = "0.17" }

# Openstack Cloud
openstack = "0.4.2"
openstack-auth = { package = "osauth", version = "0.3.4"}
openstack-reqwest = { package = "reqwest", version = "0.10.10", features = [ "socks", "blocking" ]}

# Kubernetes
#kube = "0.77.0"
#k8s-openapi = { version = "0.16.0", features = ["v1_25"] }

# Manual Api
osauth = "0.4.0"
#osauth-reqwest = { package = "reqwest", version = "0.11.11", features = [ "socks" ] }

# Serde
serde = { version = "1.0.147", features = ["derive"]}
serde_json = "1.0.87"
serde_yaml = "0.9.14"
serde_bytes = "0.11.9"
bincode = "1.3.3"

osm = { path = "../osm-rs" }
holmes_macros = { path = "../holmes-rs/holmes_macros" }
holmes = { path = "../holmes-rs/holmes" }

# Web Api
actix = "0.13"
actix-web = "4"
actix-cors = "0.6.4"
actix-files = "*"
actix-web-actors = "4.1.0"

# RDF
oxigraph = "0.3.17"
sophia = { version = "0.7.2", features = ["xml"]}
csv = "1.2"
